# mini-rust-query-engine

./: .gitignore  Cargo.toml  Makefile  README.md
crates/query-engine-core/: Cargo.toml
crates/query-engine-datasources/: Cargo.toml  README.md
crates/query-engine-datasources/src/: csv_data_source.rs  data_source.rs  in_memory_data_source.rs  lib.rs  parquet_data_source.rs
crates/query-engine-datatypes/: Cargo.toml  README.md
crates/query-engine-datatypes/src/: arrow_field_vector.rs  arrow_type.rs  column_vector.rs  lib.rs  literal_value.rs  record_batch.rs  schema.rs
crates/query-engine-logical-plan/: Cargo.toml  README.md
crates/query-engine-logical-plan/src/: aggregate.rs  convenience_methods.rs  dataframe.rs  expressions.rs  join.rs  lib.rs  limit.rs  logical_expr.rs  logical_plan.rs  projection.rs  scan.rs  selection.rs
crates/query-engine-sql/: Cargo.toml  README.md
crates/query-engine-sql/src/: lib.rs  pratt_parser.rs  sql_expr.rs  sql_tokenizer.rs  token_stream.rs  tokens.rs
docs/figures/query-engine-core/: arrow.excalidraw
docs/figures/query-engine-datatypes/: arrow_field_vector.excalidraw  flowchart.excalidraw  literal_value_vector.excalidraw  record_batch.excalidraw  schema.excalidraw
docs/figures/query-engine-logical-plan/: dataframe_api.excalidraw  expression-plan-example.excalidraw  logical-and-expression-trees.excalidraw  logical-plan-example.excalidraw  recursion.excalidraw  to_field_recursion.excalidraw
docs/figures/query-engine-sql/: parsing_example.excalidraw  sql_full_process.excalidraw  tokens.excalidraw  (+1 more)
(+9 files in other folders)
