[workspace]
members = [
    "crates/query-engine-core",
    "crates/query-engine-datatypes",
    "crates/query-engine-datasources",
    "crates/query-engine-logical-plan",
    "crates/query-engine-sql",
]
resolver = "2"

[workspace.dependencies]
arrow = "58"
parquet = "58"
csv = "1.4.0"
strum = "0.28.0"
strum_macros = "0.28.0"