[package]
name = "query-engine-main"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { workspace = true }
query-engine-datatypes = { path = "../query-engine-datatypes" }
query-engine-datasources = { path = "../query-engine-datasources" }
query-engine-logical-plan = { path = "../query-engine-logical-plan" }
query-engine-sql = { path = "../query-engine-sql" }
